--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>เครื่องมือคำนวณภาษี</h1>
+        <h1>คำนวณราคาขายก่อนหักภาษี</h1>
 
         <div class="section">
             <h3>คำนวณราคาขายเพื่อให้ได้กำไร 30% หลังหักภาษี</h3>
